Fix all the wrong width and white space on the sign-in page

--- a/app/assets/stylesheets/verify-frontend.scss
+++ b/app/assets/stylesheets/verify-frontend.scss
@@ -38,3 +38,9 @@
   display: none;
   visibility: hidden;
 }
+
+.page-with-back-button {
+  @include govuk-media-query($from: tablet) {
+    margin-top: -50px;
+  }
+}
